// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meta component renders correctly with all params 1`] = `
Array [
  <title
    data-react-helmet={true}
  >
    The Title On The Meta
  </title>,
  <meta
    content="The Description on the meta"
    data-react-helmet={true}
    name="description"
  />,
  <meta
    content="width=device-width, initial-scale=1, shrink-to-fit=no"
    data-react-helmet={true}
    name="viewport"
  />,
  <meta
    content="article"
    data-react-helmet={true}
    property="og:type"
  />,
  <meta
    content="The Title On The Meta"
    data-react-helmet={true}
    property="og:title"
  />,
  <meta
    content="The Description on the meta"
    data-react-helmet={true}
    property="og:description"
  />,
  <meta
    content="http://test.com/test"
    data-react-helmet={true}
    property="og:url"
  />,
  <meta
    content="/image-custom.png"
    data-react-helmet={true}
    property="og:image"
  />,
  <meta
    content="The site title"
    data-react-helmet={true}
    property="og:site_name"
  />,
  <meta
    content="https://asiermarques.com"
    data-react-helmet={true}
    property="article:author"
  />,
  <link
    data-react-helmet={true}
    href="http://test.com/test"
    rel="canonical"
  />,
  <link
    data-react-helmet={true}
    href="/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    data-react-helmet={true}
    href="/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    data-react-helmet={true}
    href="/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    data-react-helmet={true}
    href="/site.webmanifest"
    rel="manifest"
  />,
]
`;

exports[`Meta component renders correctly with default site params 1`] = `
Array [
  <title
    data-react-helmet={true}
  >
    The Title On The Meta
  </title>,
  <meta
    content="The Description on the meta"
    data-react-helmet={true}
    name="description"
  />,
  <meta
    content="width=device-width, initial-scale=1, shrink-to-fit=no"
    data-react-helmet={true}
    name="viewport"
  />,
  <meta
    content="article"
    data-react-helmet={true}
    property="og:type"
  />,
  <meta
    content="The Title On The Meta"
    data-react-helmet={true}
    property="og:title"
  />,
  <meta
    content="The Description on the meta"
    data-react-helmet={true}
    property="og:description"
  />,
  <meta
    content="http://test.com"
    data-react-helmet={true}
    property="og:url"
  />,
  <meta
    content="/the-image.png"
    data-react-helmet={true}
    property="og:image"
  />,
  <meta
    content="The site title"
    data-react-helmet={true}
    property="og:site_name"
  />,
  <meta
    content="https://asiermarques.com"
    data-react-helmet={true}
    property="article:author"
  />,
  <link
    data-react-helmet={true}
    href="http://test.com"
    rel="canonical"
  />,
  <link
    data-react-helmet={true}
    href="/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    data-react-helmet={true}
    href="/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    data-react-helmet={true}
    href="/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    data-react-helmet={true}
    href="/site.webmanifest"
    rel="manifest"
  />,
]
`;
